# cheap-second-opinion

./: .gitignore  .markdownlint.jsonc  README.md  models.toml  pyproject.toml
.github/workflows/: docs-ci.yml
_docs/: documentation_guide.md
_docs/guide/: cheap-second-opinion-usage.md
examples/: sample.diff
skills/cheap-second-opinion/: SKILL.md
skills/cheap-second-opinion/scripts/: cheap-opinion
skills/cheap-second-opinion/scripts/cheap_opinion/: __init__.py  prompts.py
src/cheap_opinion/: cli.py
