[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cheap-second-opinion"
version = "0.1.0"
description = "OpenRouter-backed read-only second-opinion CLI and Codex skill"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cheap-opinion = "cheap_opinion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cheap_opinion = ["models.toml"]
